# fman

./: .gitignore  .gitmodules  CMakeLists.txt  fman_http.cpp  fman_http.h  fman_paths.h  fman_window_manager.h  main.cpp
.github/workflows/: testing.yaml
lib/: fman_http.cpp  fman_http.h  fman_paths.h  fman_window_manager.cpp  fman_window_manager.h
tests/: test_curl.cpp
